# Racial_Covenants

./: .env.example  .gitignore  Dockerfile  PROJECT_STATE.md  README.md  Scrape Deed Book.command  docker-compose.yml  fix_guest_login.md  fix_guest_session.md  fix_image_resolution.md  fix_navigation_hang.md  fix_networkidle_hang.md  fix_scraper_timeouts.md  fix_use_real_chrome.md  pyproject.toml  racial_covenant_detector_plan.md  requirements.txt  scrape_deeds.py  scrape_deeds_backup.py  setup.sh  start.sh
docs/fix_notes/: add_scraper_task.md  add_stealth_measures.md  fix_cloudflare_block.md  fix_dopostback_guest.md  fix_guest_button_click.md  fix_partial_page_capture.md  fix_use_claude_vision.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/pages/: History.jsx  Processing.jsx  Results.jsx  Upload.jsx
migrations/: 001_initial_schema.sql
src/: cli.py  config.py
src/api/: main.py
src/api/routes/: books.py  detections.py  scan.py
src/database/: __init__.py  models.py
src/pipeline/: classifier.py  exporter.py  ingestion.py  keyword_filter.py  ocr.py  scanner.py
tests/: test_classifier.py  test_keyword_filter.py
